# kairon

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
executions/: models.py  serializers.py  tests.py  urls.py  views.py
executions/migrations/: 0001_initial.py  0002_remove_taskexecution_next_retry_at_and_more.py  0003_remove_taskexecution_temporal_activity_id.py  0004_remove_execution_temporal_run_id.py
executions/services/: reset_execution.py  start_execution.py  update_execution.py  update_task_execution.py
executions/types/: execution.py  task_execution.py
kairon/: asgi.py  settings.py  urls.py  wsgi.py
notifications/: exceptions.py  tests.py
notifications/services/: base.py  mailersend.py
notifications/types/: email.py
reports/: tests.py
reports/services/: formart_report.py  report_generator.py
reports/types/: report.py
services/email/: base.py  mailersend_service.py
temporal/: activities.py  apps.py  client.py  tests.py  worker.py  workflows.py
temporal/services/: prepare_schedule.py  prepare_workflow.py  reset_workflow.py  start_schedule.py  start_workflow.py
temporal/types/: status.py  task.py  workflow.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
workflows/: models.py  serializers.py  tests.py  urls.py  views.py
workflows/migrations/: 0001_initial.py  0002_task_created_by.py  0003_rename_retry_delay_task_initial_interval_and_more.py  0004_rename_delay_seconds_workflow_delay_minutes_and_more.py
workflows/services/: create_workflow.py
(+2 files in other folders)
